recenlty view product api added
